blinker - Hopefully the sorting/index thing is fixed for the datagrid.

--- a/LinkerPlayer/UserControls/PlaylistTabs.xaml
+++ b/LinkerPlayer/UserControls/PlaylistTabs.xaml
@@ -110,6 +110,7 @@
           SelectionChanged="TracksTable_OnSelectionChanged"
           SelectionMode="Single"
           SelectionUnit="FullRow"
+          Sorting="TracksTable_OnSorting"
           VirtualizingStackPanel.IsVirtualizing="True"
           VirtualizingStackPanel.VirtualizationMode="Standard">
 
