--- a/LinkerPlayer/Styles/EqVerticalSlider.xaml
+++ b/LinkerPlayer/Styles/EqVerticalSlider.xaml
@@ -10,10 +10,10 @@
         <ControlTemplate TargetType="RepeatButton">
           <Border
             x:Name="increaseBorder"
-            Width="2"
+            Width="12"
             Background="{DynamicResource ControlDisabledBrush}"
-            BorderBrush="{DynamicResource ControlDisabledBrush}"
-            BorderThickness="1">
+            BorderBrush="Transparent"
+            BorderThickness="4.5, 0">
             <ContentPresenter
               x:Name="contentPresenter"
               Margin="{TemplateBinding Padding}"
@@ -24,16 +24,13 @@
           </Border>
           <ControlTemplate.Triggers>
             <Trigger Property="IsMouseOver" Value="true">
-              <Setter TargetName="increaseBorder" Property="Background" Value="{StaticResource ControlMouseOverBrush}" />
               <Setter TargetName="increaseBorder" Property="BorderBrush" Value="{StaticResource ControlBorderDarkBrush}" />
             </Trigger>
             <Trigger Property="IsPressed" Value="true">
-              <Setter TargetName="increaseBorder" Property="Background" Value="{StaticResource ControlBackgroundBrush}" />
               <Setter TargetName="increaseBorder" Property="BorderBrush" Value="{StaticResource ControlBorderDarkBrush}" />
             </Trigger>
             <Trigger Property="IsEnabled" Value="false">
-              <Setter TargetName="contentPresenter" Property="Opacity" Value="0.56" />
-              <Setter TargetName="increaseBorder" Property="Background" Value="{StaticResource ControlDisabledBrush}" />
+              <!--<Setter TargetName="contentPresenter" Property="Opacity" Value="0.56" />-->
               <Setter TargetName="increaseBorder" Property="BorderBrush" Value="{StaticResource ControlDisabledBrush}" />
             </Trigger>
           </ControlTemplate.Triggers>
@@ -50,10 +47,10 @@
         <ControlTemplate TargetType="RepeatButton">
           <Border
             x:Name="decreaseBorder"
-            Width="2"
+            Width="12"
             Background="{DynamicResource ControlAccentDarkBrush}"
-            BorderBrush="{DynamicResource ControlAccentDarkBrush}"
-            BorderThickness="1"
+            BorderBrush="Transparent"
+            BorderThickness="4.5,0"
             SnapsToDevicePixels="True">
             <ContentPresenter
               x:Name="contentPresenter"
@@ -65,16 +62,13 @@
           </Border>
           <ControlTemplate.Triggers>
             <Trigger Property="IsMouseOver" Value="true">
-              <Setter TargetName="decreaseBorder" Property="Background" Value="{StaticResource ControlMouseOverBrush}" />
               <Setter TargetName="decreaseBorder" Property="BorderBrush" Value="{StaticResource ControlBorderDarkBrush}" />
             </Trigger>
             <Trigger Property="IsPressed" Value="true">
-              <Setter TargetName="decreaseBorder" Property="Background" Value="{StaticResource ControlBackgroundBrush}" />
               <Setter TargetName="decreaseBorder" Property="BorderBrush" Value="{StaticResource ControlBorderDarkBrush}" />
             </Trigger>
             <Trigger Property="IsEnabled" Value="false">
-              <Setter TargetName="contentPresenter" Property="Opacity" Value="0.56" />
-              <Setter TargetName="decreaseBorder" Property="Background" Value="{StaticResource ControlDisabledBrush}" />
+              <!--<Setter TargetName="contentPresenter" Property="Opacity" Value="0.56" />-->
               <Setter TargetName="decreaseBorder" Property="BorderBrush" Value="{StaticResource ControlDisabledBrush}" />
             </Trigger>
           </ControlTemplate.Triggers>
@@ -94,10 +88,11 @@
             x:Name="Ellipse"
             Width="12"
             Height="12"
-            Fill="{DynamicResource ControlAccentDarkBrush}" />
+            Fill="Transparent" 
+            Stroke="{DynamicResource PlayerControlButtonBorderBrush}" />
           <ControlTemplate.Triggers>
             <Trigger Property="IsMouseOver" Value="true">
-              <Setter TargetName="Ellipse" Property="Fill" Value="{DynamicResource ControlAccentDarkBrush}" />
+              <Setter TargetName="Ellipse" Property="Stroke" Value="{DynamicResource ControlAccentLightBrush}" />
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
               <Setter TargetName="Ellipse" Property="Fill" Value="{DynamicResource ControlDisabledBrush}" />
